# storetemplate

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  resume
.github/workflows/: ci.yml  release.yml
json/: storetemplate.json  swissdamed.json  swissdamed2sqlite.json  untitled.json
macos/: Info.plist  build-appstore.sh  build-notarized-dmg.sh  entitlements-devid.plist
src/: deploy.rs  icon_gen.rs  json_output.rs  languages.rs  main.rs  state.rs  stl_render.rs  translate.rs  widgets.rs  workflow.rs
src/stores/: apple.rs  common.rs  github.rs  google_play.rs  microsoft.rs  mod.rs
