[package]
name = "storetemplate"
version = "1.0.0"
edition = "2021"
license = "GPL-3.0"
description = "Interactive app store submission template generator"

[dependencies]
eframe = "0.31"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
rfd = "0.15"
