[package]
name = "storetemplate"
version = "1.1.4"
edition = "2021"
license = "GPL-3.0"
description = "Interactive app store submission template generator"

[dependencies]
eframe = "0.31"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
rfd = { version = "0.15", default-features = false, features = ["gtk3"] }
open = "5"
reqwest = { version = "0.12", features = ["blocking", "json"] }
base64 = "0.22"
image = "0.25"
jsonwebtoken = "9"
